# watch-party

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md  dl_fonts.sh
frontend/: create.html  create.mjs  index.html  main.js  main.mjs  styles.css
frontend/lib/: chat.mjs  create-session.mjs  emojis.mjs  join-session.mjs  links.mjs  pling.mjs  reconnecting-web-socket.mjs  state.mjs  video.mjs  watch-session.mjs
react/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
react/src/: fonts.ts  index.tsx  style.css  types.ts
react/src/components/: Header.tsx  chatBox.tsx  chatMessage.tsx  color-picker.tsx  expandableInput.tsx  player.tsx
react/src/components/ui/: loader.tsx  themeToggle.tsx
react/src/context/: themeContext.tsx  themeProvider.tsx  useWatchParty.tsx  watchPartyContext.tsx
react/src/lib/: joinMsgs.ts  leaveMsgs.ts  utils.ts
react/src/pages/: _404.tsx  vidtest.tsx
react/src/pages/Home/: index.tsx
react/src/pages/Video/: index.tsx
scripts/: get_emojis.sh  get_unicode_emojis.sh
src/: events.rs  main.rs  utils.rs  viewer_connection.rs  watch_session.rs
