[package]
name = "watch-party"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.17"
futures-util = "0.3.17"
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["fs"] }
uuid = { version = "0.8.2", features = ["v4"] }
warp = "0.3.1"
